fixed a compatibility issue with OpenBSD (and possibly other BSD based systems)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@406 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -115,11 +115,11 @@
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
 
-/* Define to the home page for this package. */
-#undef PACKAGE_URL
-
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
+
+/* Define to 1 to install an empty signal handler for SIGCHLD */
+#undef SIGCHLD_HANDLER
 
 /* Determine what socket length (socklen_t) data type is */
 #undef SOCKLEN_T
