--- a/configure.ac
+++ b/configure.ac
@@ -3,33 +3,17 @@
 
 AC_PREREQ(2.59)
 AC_INIT(nzbget, 0.8.0-testing, hugbug@users.sourceforge.net)
+AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE(nzbget, 0.8.0-testing)
 AC_CONFIG_SRCDIR([nzbget.cpp])
 AC_CONFIG_HEADERS([config.h])
-
-
-
-dnl
-dnl Architecture check.
-dnl
-AC_CANONICAL_HOST
 
 
 dnl
 dnl Set default library path, if not specified in environment variable "LIBPREF".
 dnl
 if test "$LIBPREF" = ""; then
-	case "$host" in
-		*-linux*)
-			LIBPREF="/usr"
-			;;
-		*-freebsd*)
-			LIBPREF="/usr/local"
-			;;
-		*-solaris*)
-			LIBPREF="/usr"
-			;;
-	esac
+	LIBPREF="/usr"
 fi
 
 
@@ -458,13 +442,28 @@ fi
 
 
 dnl 
-dnl Some Linux systems may require an empty signal handler for SIGCHLD
-dnl in order for exit codes to be correctly delivered to parent process
+dnl Some Linux systems require an empty signal handler for SIGCHLD
+dnl in order for exit codes to be correctly delivered to parent process.
+dnl Some BSD systems however may not function properly if the handler is installed.
+dnl The default behavior is to check the target and disable the handler on BSD but keep it enabled on other systems.
 dnl
-AC_ARG_WITH(sigchld-handler,
-	[],
-	AC_DEFINE([SIGCHLD_HANDLER], 1, [Define to 1 to install an empty signal handler for SIGCHLD]),
-	)
+AC_MSG_CHECKING(whether to use an empty SIGCHLD handler)
+AC_ARG_ENABLE(sigchld-handler,
+	[AS_HELP_STRING([--disable-sigchld-handler], [do not use sigchld-handler (the disabling is recommended for BSD)])],
+	[SIGCHLDHANDLER=$enableval],
+	[SIGCHLDHANDLER=auto])
+if test "$SIGCHLDHANDLER" = "auto"; then
+	SIGCHLDHANDLER=yes
+	case "$target" in
+		*bsd*)
+			SIGCHLDHANDLER=no
+			;;
+	esac
+fi
+AC_MSG_RESULT($SIGCHLDHANDLER)
+if test "$SIGCHLDHANDLER" = "yes"; then
+	AC_DEFINE([SIGCHLD_HANDLER], 1, [Define to 1 to install an empty signal handler for SIGCHLD])
+fi
 
 
 dnl 
