added support for regular expressions (POSIX ERE Syntax) in remote commands <--list/-L> and <--edit/-E> using new subcommands <GR> and <FR>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@422 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -67,6 +67,9 @@
 /* Define to 1 if libpar2 supports cancelling (needs a special patch) */
 #undef HAVE_PAR2_CANCEL
 
+/* Define to 1 if you have the <regex.h> header file. */
+#undef HAVE_REGEX_H
+
 /* Define to 1 if spinlocks are supported */
 #undef HAVE_SPINLOCK
 
