added gzip-support to built-in web-server
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@436 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,9 @@
 /* Define to 1 to not use curses */
 #undef DISABLE_CURSES
 
+/* Define to 1 to disable gzip-support */
+#undef DISABLE_GZIP
+
 /* Define to 1 to disable smart par-verification and restoration */
 #undef DISABLE_PARCHECK
 
