renamed example configuration file and postprocessing script to make the installation easier
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@444 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -721,7 +721,7 @@ NzbCleanupDisk=no
 # multiple collections; see note below for the definition of "collection") 
 # is completed and possibly par-checked/repaired.
 #
-# Example: "PostProcess=~/postprocess-example.sh".
+# Example: "PostProcess=~/nzbget-postprocess.sh".
 #
 # NZBGet passes following arguments to postprocess-program as environment
 # variables:
@@ -811,7 +811,7 @@ NzbCleanupDisk=no
 #      you can try unpack again. 
 #
 # NOTE: an example script for unrarring is provided within distribution 
-# in file "postprocess-example.sh".
+# in file "nzbget-postprocess.sh".
 PostProcess=
 
 # Allow multiple post-processing for the same nzb-file (yes, no).
