--- a/Makefile.in
+++ b/Makefile.in
@@ -212,7 +212,7 @@ nzbget_SOURCES = ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 	Util.h XmlRpc.cpp XmlRpc.h WebDownloader.cpp WebDownloader.h WebServer.cpp WebServer.h UrlCoordinator.cpp UrlCoordinator.h \
 	nzbget.cpp nzbget.h
 
-EXTRA_DIST = nzbget.conf.example postprocess-example.sh postprocess-example.conf \
+EXTRA_DIST = nzbget.conf nzbget-postprocess.sh nzbget-postprocess.conf \
 	win32.h NTService.cpp NTService.h \
 	libpar2-0.2-bugfixes.patch libpar2-0.2-cancel.patch \
 	libpar2-0.2-MSVC8.patch libsigc++-2.0.18-MSVC8.patch \
